@@ -2,6 +2,9 @@
 	FIM NEWS -- history of (main) user-visible changes in FIM.
 
                 Version 0.6-trunk
+# (r1013)
+ * introduced context prepend/append shebang syntax "#!fim:^=" and "#!fim:+=" in description files.
+   (FIXME: undocumented)
 # (r1011)
  * fix: removed obsolete documentation for the "window" command, now disabled.
 # (r1010)
